tests/03-typecheck/03-return.ref
tests/03-typecheck/03-return.sl:1:6, Semantic error: func main has non matching return, expected (int) but got (int, int)
