tests/03-typecheck/03-return.sl
func main () (int) in
    0 0
end
